[tool.poetry]
name = "fastapi-development"
version = "0.1.0"
description = ""
authors = ["Sunny Shankar <sunny.shankar44@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_development"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
